--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Kini, Anda tetap bisa memulai chat dengan seseorang menggunakan nama penggunanya meski tidak sengaja mengetik simbol “@” di awal. Beber@p@ kebias@@n memang sulit diub@h.
