--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Agora, quando você tentar iniciar uma conversa com o nome de usuário de alguém no Signal, isso funcionará mesmo que você digite acidentalmente o símbolo “@” primeiro.
