--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Теперь у вас получится начать чат с каким-либо именем пользователя Signal, даже если вы сначала случайно введёте символ «@». От некотор@х прив@чек оч@нь тр@дно изб@виться.
