--- a/Signal/translations/vi.lproj/Localizable.strings
+++ b/Signal/translations/vi.lproj/Localizable.strings
@@ -6404,10 +6404,10 @@
 "SAFETY_TIPS_FAKE_BUSINESS_TITLE" = "Doanh nghiệp và tổ chức giả mạo";
 
 /* Message contents for the fake names safety tip. */
-"SAFETY_TIPS_FAKE_NAMES_BODY" = "Signal will never contact you for your registration code or PIN. Be cautious of requests that impersonate others. Profile names are chosen by their account holder and aren't verified.";
+"SAFETY_TIPS_FAKE_NAMES_BODY" = "Signal sẽ không bao giờ liên hệ bạn để lấy mã đăng ký hoặc mã PIN. Hãy cẩn trọng với các yêu cầu mạo danh. Tên hồ sơ được chọn bởi chủ tài khoản và không được xác minh.";
 
 /* Message title describing the fake names safety tip. */
-"SAFETY_TIPS_FAKE_NAMES_TITLE" = "Fake names and accounts";
+"SAFETY_TIPS_FAKE_NAMES_TITLE" = "Tên và tài khoản giả";
 
 /* Message describing safety tips for group conversations. */
 "SAFETY_TIPS_GROUPS_HEADER_MESSAGE" = "Xem xét thật cẩn thận yêu cầu này. Không có ai trong số các liên hệ của bạn hoặc người bạn có trò chuyện cùng ở trong nhóm này. Đây là một số điều bạn cần chú ý:";
@@ -8165,7 +8165,7 @@
 "SYSTEM_MESSAGE_DEFAULT_DISAPPEARING_MESSAGE_TIMER_FORMAT" = "Thời gian biến mất tin nhắn sẽ được cài thành %1$@ khi bạn nhắn tin cho họ.";
 
 /* Indicator warning about an unknown contact thread */
-"SYSTEM_MESSAGE_UNKNOWN_THREAD_REVIEW_CAREFULLY_WARNING" = "Review Carefully";
+"SYSTEM_MESSAGE_UNKNOWN_THREAD_REVIEW_CAREFULLY_WARNING" = "Kiểm tra kỹ";
 
 /* Indicator warning about an unknown contact thread. */
 "SYSTEM_MESSAGE_UNKNOWN_THREAD_WARNING_CONTACT" = "Không có nhóm chung. Hãy xem xét yêu cầu thật kĩ lưỡng.";
