--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Når du nu forsøger at starte en chat med en persons Signal-brugernavn, vil det fungere, selvom du ved et uheld skriver "@"-symbolet først. Nogle h@bits @re h@rd til bre@k.
