--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Τώρα, όταν προσπαθείς να ξεκινήσεις μια συνομιλία με το όνομα χρήστη Signal κάποιου, θα λειτουργεί ακόμα και αν κατά λάθος πληκτρολογήσεις πρώτα το σύμβολο «@».
