--- a/fastlane/metadata/es-MX/release_notes.txt
+++ b/fastlane/metadata/es-MX/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Ahora, cuando intentes iniciar un chat usando el alias de Signal de alguien, funcionará incluso si se te escapa el símbolo "@" antes del nombre. S@bemos que cuest@ c@mbi@r l@s viej@s costumbres.
