--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Kun nyt yrität aloittaa keskustelun Signal-käyttäjänimellä, se toimii, vaikka kirjoittaisit vahingossa @-symbolin ensin.
