--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Lorsque vous recherchez un contact et que vous saisissez accidentellement le symbole @ avant son nom d'utilisateur, cela ne vous empêche plus de le trouver et de démarrer une conversation avec lui. P@rce qu'on s@it tous que cert@ines h@bitudes ont l@ vie dure.
