--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• עכשיו כשמנסים להתחיל צ׳אט עם שם המשתמש של מישהו או מישהי ב–Signal, זה יעבוד גם אם בטעות הקלדת קודם את הסמל ״@״.
