--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• अब जब आप किसी के Signal यूज़रनेम से चैट शुरू करने की कोशिश करेंगे, तो यह काम करेगा, चाहे आप गलती से पहले “@” संकेत टाइप क्यों न कर दें। कुछ आदतें छोड़ना मुश्किल है।
