--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Sada kada pokušate započeti razgovor s nečijim korisničkim imenom za Signal, funkcionirat će čak i ako prvo slučajno upišete simbol „@“.
