--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Mostantól, amikor megpróbálsz csevegést indítani valakinek a Signal felhasználónevével, akkor is működni fog, ha véletlenül először beírod a „@” szimbólumot.
