--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• 誰かのSignalユーザーネームでチャットを始めようとしたときに、最初に誤って「@」記号を入力してもチャットを開始できるようになりました。
