--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Als je probeert een chat te starten met iemands Signal-gebruikersnaam maar per ongeluk eerst het ‘@-symbool’ typt, werkt dit nu ook.
