--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Od teraz, gdy chcesz rozpocząć czat z innym użytkownikiem aplikacji Signal, możesz wyszukać daną osobę, nawet jeśli przy wpisywaniu imienia omyłkowo zaczniesz od symbolu „@”. Nie dziękuj. Zn@my siłę n@wyku.
