--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Acum, când încerci să începi un chat cu numele de utilizator Signal al cuiva, va funcționa chiar dacă introduci din greșeală simbolul „@”. Unele obiceiuri sunt greu de schimb@t.
