--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Keď teraz pri začatí četu omylom zadáte ako prvý symbol „@“ namiesto používateľského mena Signal, čet bude bez problémov fungovať.
