--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• ให้คุณเริ่มต้นแชทด้วยชื่อผู้ใช้ Signal ได้แบบไม่มีสะดุด แม้จะบังเอิญพิมพ์สัญลักษณ์ @ นำหน้าชื่อไปด้วยก็ตาม
