--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Bundan böyle birinin Signal kullanıcı adıyla sohbet başlatmaya çalıştığında, önce kazara "@" sembolü yazsan bile sorun olmayacaktır. Bazı a@lışkanlıklardan vazgeçmesi @ordur.
