--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Тепер можна почати розмову через ім'я користувача Signal, навіть якщо ви випадково спершу ввели символ @. Сил@ звички не повинн@ стримув@ти спілкув@ння.
