--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you attempt to start a chat with someone's Signal username, it will work even if you accidentally type the “@” symbol first. Some h@bits @re h@rd to bre@k.
+• Giờ đây bạn có thể nhập ký tự “@” trước khi nhập tên người dùng Signal của một người để bắt đầu cuộc trò chuyện.
